Added home route path in homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sanskarmodi8.github.io/Techy-Star",
+  "homepage": "https://sanskarmodi8.github.io/Techy-Star/#home",
   "name": "video_hub",
   "version": "0.1.0",
   "private": true,
